# hello-metal-cpp

./: .gitignore  CMakeLists.txt
shaders/: CMakeLists.txt  shader_path_config.h.in
shaders/metal/: mesh_with_color.metal  triangle.metal
src/: main.cpp
src/config/: config_manager.cpp  config_manager.h
src/control/: app_delegate.cpp  app_delegate.h  view_delegate.cpp  view_delegate.h
src/utils/: buffer_utils.cpp  buffer_utils.h
src/view/: mesh_factory.cpp  mesh_factory.h  renderer.cpp  renderer.h
